--- a/clients.html
+++ b/clients.html
@@ -52,7 +52,7 @@
         <td>Sté Sivom</td>
         <td>0758256514</td>
         <td>Ducrot Bertrand</td>
-        <td>bertranddc@gmail.com</td>
+        <td class="mail-resp">bertranddc@gmail.com</td>
         <td> &nbsp;
           <a href="edit.html"><svg style="color: orange;" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pen"
               fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -78,7 +78,7 @@
         <td>Sté Cora</td>
         <td>0758369820</td>
         <td>Martinez Pablo</td>
-        <td>martzpablo@gmail.com</td>
+        <td class="mail-resp">martzpablo@gmail.com</td>
         <td> &nbsp;
           <a href="edit.html"><svg style="color: orange;" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pen"
               fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -104,7 +104,7 @@
         <td>Sté Carrefour</td>
         <td>0758256910</td>
         <td>Charliot Emma</td>
-        <td>emmacharliot@gmail.com</td>
+        <td class="mail-resp">emmacharliot@gmail.com</td>
         <td> &nbsp;
           <a href="edit.html"><svg style="color: orange;" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pen"
               fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -130,7 +130,7 @@
         <td>Sté Meridien Etoile</td>
         <td>0758369711</td>
         <td>Hernandez Mathieu</td>
-        <td>meridienetoile@gmail.com</td>
+        <td class="mail-resp">meridienetoile@gmail.com</td>
         <td> &nbsp;
           <a href="edit.html"><svg style="color: orange;" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pen"
               fill="currentColor" xmlns="http://www.w3.org/2000/svg">
