--- a/edit.html
+++ b/edit.html
@@ -44,7 +44,7 @@
     <div class="container" style="margin-top: 10%;">
       <div class="row justify-content-center">
         <div class="col">
-          <h2 class="title-projet" style="text-align:center;">Édition du projet</h2>
+          <h2 class="title-projet" style="text-align:center;">Édition du client</h2>
           <div style="margin: 5%;"></div>
 
 
@@ -72,7 +72,7 @@
           </div>
           <button style="margin-right: 3%; display: block; margin-bottom: 4%;" class="btn btn-outline-secondary"
             type="button" id="button-addon2">Confirmer</button>
-          <a href="clients.html"> Retourner sur la page des projets</a>
+          <a href="clients.html"> Retourner sur la page des clients</a>
         </div>
       </div>
     </div>
