--- a/project.html
+++ b/project.html
@@ -289,7 +289,7 @@
               <td>01234</td>
               <td>Forfait</td>
               <td>AFPA</td>
-              <td>Skyp2</td>
+              <td>Skype</td>
               <td><a href="#" data-toggle="modal" data-target="#myModalEye"><i class="far fa-eye"></i></a>
                 <a href="pencil.html"><i class="fas fa-pencil-alt" style="color: orange;"></i></a>
                 <a href="#" data-toggle="modal" data-target="#myTrash"><i class="fas fa-trash-alt"
@@ -314,7 +314,7 @@
             <div class="modal-body">
               <p>Souhaitez-vous masquer ce projet ?</p>
               <p class="text-warning">
-                <small>Note: Votre projet de ne sera pas perdu.</small>
+                <small>Note: Votre projet ne sera pas perdu.</small>
               </p>
             </div>
             <div class="modal-footer">
