--- a/partner.html
+++ b/partner.html
@@ -33,7 +33,7 @@
   </nav>
 
 
-  <div class="container-fluid" style="margin-top: 8%;">
+  <div id="partner-content" class="container-fluid" style="margin-top: 8%;">
 
         <h1 class="text-center">Sté Meridien Etoile</h1>
     
@@ -48,10 +48,10 @@
              Le groupe est ensuite passé aux mains de différents investisseurs avant que la marque ne soit finalement 
              rachetée en novembre 2005 par Starwood Hotels & Resorts, groupe hôtelier américain basé à Stamford (Connecticut).
               En 2018, la chaîne appartient aujourd'hui au groupe Mariott.</p>
-              <p>es hôtels offrent dans le monde entier un confort à l'européenne d'inspiration française, tout en intégrant les cultures locales. 
-                La chaîne possède plus de 130 hôtels luxueux et haut de gamme dans plus de 50 pays du monde2. 
+              <p>Les hôtels offrent dans le monde entier un confort à l'européenne d'inspiration française, tout en intégrant les cultures locales. 
+                La chaîne possède plus de 130 hôtels luxueux et haut de gamme dans plus de 50 pays du monde. 
                 La majorité de ces établissements se trouvent dans les principales villes et les lieux de villégiature d'Europe,
-                 d'Afrique, du Moyen-Orient, d'Asie-Pacifique et d'Amérique 3.</p>
+                 d'Afrique, du Moyen-Orient, d'Asie-Pacifique et d'Amérique.</p>
         </div>
         <hr>
                 <span class="telephone"> <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
